<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90897E"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_calculator"
        android:id="@+id/textHeading"
        android:layout_margin="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
       />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/enter_first_number"
        android:id="@+id/firstNumber"
        android:inputType="number"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/enter_second_number"
        android:id="@+id/secondNumber"
        android:layout_marginTop="10dp"
        android:inputType="number"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:text="@string/buttonAddition"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSub"
            android:text="@string/buttonSubstract"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnMult"
            android:text="@string/buttonMultiplication"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            />
        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDiv"
            android:text="@string/buttonDivision"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_marginTop="30dp"
        android:textSize="30sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnclear"
        android:text="@string/buttonClear"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginStart="100dp"
        />

</LinearLayout>